test/positive/feature_intliterals.java

public class feature_intliterals {
  public feature_intliterals() {}
  protected int x = 42;
}

