test/negative/feature_arraydata.java

public class feature_arraydata {
  protected int[] x = { 1, 1, 2, 3, 5, 8 };

  public feature_arraydata() {
  }
}

